--- a/package.json
+++ b/package.json
@@ -1,19 +1,76 @@
 {
-    "name": "@aifuse/web",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-      "dev": "astro dev --experimental-integrations",
-      "start": "astro dev --experimental-integrations",
-      "build": "astro build --experimental-integrations",
-      "preview": "astro preview --experimental-integrations"
-    },
-    "devDependencies": {
-      "@atomico/astro": "^0.4.0",
-      "astro": "^1.0.0-beta.63"
-    },
-    "dependencies": {
-      "@atomico/site": "^0.1.0",
-      "atomico": "^1.60.3"
-    }
-  }
+  "name": "@aifuse/web",
+  "version": "0.0.1",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "astro dev --experimental-integrations",
+    "start": "astro dev --experimental-integrations",
+    "build": "astro build --experimental-integrations",
+    "preview": "astro preview --experimental-integrations",
+    "prepare": "husky install",
+    "i18n:generate": "astro-i18next generate",
+    "format": "prettier -w .",
+    "lint:eslint": "eslint . --ext .js,.astro,.ts,.tsx --debug",
+    "lint:eslint:fix": "eslint . --ext .js,.astro,.ts,.tsx --fix --debug",
+    "test": "playwright test",
+    "test:e2e": "start-server-and-test 'pnpm run start' http://localhost:3000 'pnpm run test'"
+  },
+  "devDependencies": {
+    "@atomico/astro": "^0.4.0",
+    "astro": "1.8.0",
+    "@astrojs/image": "0.12.1",
+    "@astrojs/sitemap": "1.0.0",
+    "@astrojs/tailwind": "2.1.3",
+    "@playwright/test": "1.29.1",
+    "@tailwindcss/aspect-ratio": "0.4.2",
+    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/line-clamp": "0.4.2",
+    "@tailwindcss/typography": "0.5.8",
+    "@typescript-eslint/eslint-plugin": "5.47.1",
+    "@typescript-eslint/parser": "5.47.1",
+    "astro-compress": "1.1.23",
+    "astro-i18next": "1.0.0-beta.12",
+    "astro-icon": "0.8.0",
+    "astro-robots-txt": "0.3.10",
+    "astro-seo": "0.6.1",
+    "dompurify": "2.4.1",
+    "eslint": "8.30.0",
+    "eslint-config-standard": "17.0.0",
+    "eslint-plugin-astro": "0.21.1",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-n": "15.6.0",
+    "eslint-plugin-promise": "6.1.1",
+    "husky": "8.0.2",
+    "i18next-fs-backend": "2.1.1",
+    "locale-emoji": "0.3.0",
+    "marked": "4.2.5",
+    "nanostores": "0.7.1",
+    "postcss-nesting": "10.2.0",
+    "postcss-preset-env": "7.8.3",
+    "prettier": "2.8.1",
+    "prettier-plugin-astro": "0.7.0",
+    "prettier-plugin-tailwindcss": "0.2.1",
+    "sass": "1.57.1",
+    "start-server-and-test": "1.15.2",
+    "vite-plugin-pwa": "0.14.0",
+  },
+  "dependencies": {
+    "@astrojs/rss": "2.0.0",
+    "@atomico/site": "0.1.0",
+    "astro-netlify-cms": "0.5.0",
+    "atomico": "1.60.3",
+    "fuse.js": "6.6.2",
+    "mdast-util-to-string": "3.1.0",
+    "reading-time": "1.5.0",
+    "sharp": "0.31.3",
+    "tailwindcss": "3.2.4",
+    "uuid": "3.4.0"
+  },
+  "engines": {
+    "node": "^14.15.0 || >=16.0.0",
+    "pnpm": ">=7.0.0"
+  },
+  "packageManager": "pnpm@7.21.0"
+}
