--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Install, build, and deploy
         uses: withastro/action@v0
+        env:
+          FORMSPREE: ${{ secrets.FORMSPREE }}
         with:
           path: .
           node-version: 16
@@ -49,3 +51,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+        env:
+          FORMSPREE: ${{ secrets.FORMSPREE }}
