added config files

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,11 @@ pnpm-debug.log*
 
 # macOS-specific files
 .DS_Store
+/.idea/
+/.vscode/
+
+# Local Netlify folder
+.netlify
+/test-results/
+/playwright-report/
+/playwright/.cache/
