--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "test:e2e": "start-server-and-test 'pnpm run start' http://localhost:3000 'pnpm run test'"
   },
   "devDependencies": {
-    "@atomico/astro": "^0.4.0",
-    "astro": "1.8.0",
     "@astrojs/image": "0.12.1",
     "@astrojs/sitemap": "1.0.0",
     "@astrojs/tailwind": "2.1.3",
+    "@atomico/astro": "^0.4.0",
     "@playwright/test": "1.29.1",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.3",
@@ -29,6 +28,7 @@
     "@tailwindcss/typography": "0.5.8",
     "@typescript-eslint/eslint-plugin": "5.47.1",
     "@typescript-eslint/parser": "5.47.1",
+    "astro": "1.8.0",
     "astro-compress": "1.1.23",
     "astro-i18next": "1.0.0-beta.12",
     "astro-icon": "0.8.0",
@@ -58,15 +58,21 @@
   },
   "dependencies": {
     "@astrojs/rss": "2.0.0",
+    "@atomico/plugin-vite": "^1.4.3",
     "@atomico/site": "0.1.0",
-    "astro-netlify-cms": "0.5.0",
+    "@uppercod/template-literals": "^1.1.3",
+    "astro-netlify-cms": "^0.0.1",
     "atomico": "1.60.3",
+    "esbuild": "^0.16.12",
     "fuse.js": "6.6.2",
+    "js-yaml": "^4.1.0",
+    "magic-string": "^0.27.0",
     "mdast-util-to-string": "3.1.0",
+    "postcss-load-config": "^4.0.1",
     "reading-time": "1.5.0",
     "sharp": "0.31.3",
     "tailwindcss": "3.2.4",
-    "uuid": "3.4.0"
+    "uuid": "9.0.0"
   },
   "engines": {
     "node": "^14.15.0 || >=16.0.0",
