--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "astro dev --experimental-integrations",
-    "start": "astro dev --experimental-integrations",
-    "build": "astro build --experimental-integrations",
-    "preview": "astro preview --experimental-integrations",
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
     "prepare": "husky install",
     "i18n:generate": "astro-i18next generate",
     "format": "prettier -w .",
@@ -61,7 +61,7 @@
     "@atomico/plugin-vite": "^1.4.3",
     "@atomico/site": "0.1.0",
     "@uppercod/template-literals": "^1.1.3",
-    "astro-netlify-cms": "^0.0.1",
+    "astro-netlify-cms": "0.0.1",
     "atomico": "1.60.3",
     "esbuild": "^0.16.12",
     "fuse.js": "6.6.2",
@@ -71,7 +71,6 @@
     "postcss-load-config": "^4.0.1",
     "reading-time": "1.5.0",
     "sharp": "0.31.3",
-    "tailwindcss": "3.2.4",
     "uuid": "9.0.0"
   },
   "engines": {
