--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@atomico/astro": "^0.7.0",
-    "@atomico/tsconfig": "^1.1.2",
     "astro": "^1.9.0"
   },
   "engines": {
@@ -20,8 +18,6 @@
   },
   "packageManager": "pnpm@7.21.0",
   "dependencies": {
-    "@atomico/site": "^0.6.0",
-    "astro-netlify-cms": "^0.5.0",
-    "atomico": "^1.68.0"
+    "astro-netlify-cms": "^0.5.0"
   }
 }
